--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
 		<title>Simple Calculator</title>
 	</head>
 	<body>
+		<div id="root"></div>
 		<script src="bundle.js"></script>
 	</body>
 </html>
