--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
                 </div><!-- navbar-header -->
                 <div class="collapse navbar-collapse">
                     <ul class="nav navbar-nav">
-                        <li class="active"><a href="{{ site.baseurl }}">Home</a></li>
+                        <li class="active"><a href="https://wastegas.github.io/">Home</a></li>
                     </ul>
                     <ul class="nav navbar-nav navbar-right">
                         <li><a href="https://github.com/wastegas"><i class="fa fa-github fa-2x"></i></a></li>
